--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-BACKEND_DOMAIN = "http://localhost:8080"
+BACKEND_DOMAIN = "https://url-shortner-ydk1.onrender.com"
 MONGODB_URI = "mongodb+srv://techburnt06:sourav123@cluster0.vswscpy.mongodb.net/url_shortner"
